--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Project Starter",
+  "name": "project_Starter",
   "version": "0.1.0",
   "devDependencies": {
     "grunt": "~0.4.1",
